--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vulcana-nowatch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.php",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
