--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "A quick test for vulcana",
   "description": "A quick test1",
-  "repository": "",
+  "repository": "https://github.com/kythin/vulcana-asifnooneiswatching.git",
   "addons": []
 }
